# CppPractice

./: .gitignore  README.md  assembler_sort.cpp
Lab1/: WordCount.cpp  task_1.md
Lab10/: CMakeLists.txt  config.json  main.cpp  task_10.md
Lab11/: Algos.h  CMakeLists.txt  Xrange.h  Zip.h  main.cpp  task_11.md
Lab11/Google_tests/: AlgosTest.cpp  CMakeLists.txt  XrangeTest.cpp  ZipTest.cpp
Lab12/: CMakeLists.txt  Options.cpp  Options.h  ParserSQL.cpp  ParserSQL.h  ParserTree.cpp  main.cpp  task_12.md
Lab12/Google_tests/: CMakeLists.txt  test.cpp
Lab2/: task_2.md
Lab2/lib/: number.cpp  number.h
Lab3/: CMakeLists.txt  PileChanging.cpp  bmp.cpp  main.cpp  parser.cpp  task_3.md
Lab5/: CommandLineParser.drawio  task_5.md
Lab5/lib/: ArgParser.cpp  ArgParser.h
Lab5/tests/: argparser_test.cpp
Lab7/: CMakeLists.txt  Frames.cpp  Frames.h  main.cpp  task_7.md
Lab8/: CMakeLists.txt  CircBuf.h  CircBufExt.h  main.cpp  task_8.md
Lab8/Google_tests/: CMakeLists.txt  test.cpp  testExt.cpp
Lab9/: CMakeLists.txt  MyAllocator.h  main.cpp  task_9.md
